Fixes bugs on contact, adds Arabic language and updates javascript files
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1611 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -513,11 +513,11 @@ manage_mandates:
 manage_observations:
   controller: relations
   actions:
+  - entity_observations_dyta
   - index
   - observation_create
   - observation_delete
   - observation_update
-  - observations_dyta
 # Manage tasks
 manage_operations:
   controller: production
