Fixes the update of the prices (#154)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1620 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -563,6 +563,7 @@ manage_prices:
   - index
   - price_create
   - price_delete
+  - price_update
   - prices_dyta
   - prices_export
   - prices_import
