Adds the new controller Store for public access (#118)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1629 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -31,6 +31,7 @@ __minimum__:
   - relations::entities_dyli
   - relations::recent_events_dyta
   - relations::user_future_events_dyta
+  - store::index
 # Inaccessible
 __not_used__:
   actions:
