--- a/test/fixtures/sale_payment_modes.yml
+++ b/test/fixtures/sale_payment_modes.yml
@@ -20,23 +20,23 @@
 # 
 # == Table: sale_payment_modes
 #
-#  cash_id                :integer          
-#  commission_account_id  :integer          
-#  commission_amount      :decimal(16, 2)   default(0.0), not null
-#  commission_percent     :decimal(16, 2)   default(0.0), not null
-#  company_id             :integer          not null
-#  created_at             :datetime         not null
-#  creator_id             :integer          
-#  embankables_account_id :integer          
-#  id                     :integer          not null, primary key
-#  lock_version           :integer          default(0), not null
-#  name                   :string(50)       not null
-#  published              :boolean          
-#  updated_at             :datetime         not null
-#  updater_id             :integer          
-#  with_accounting        :boolean          not null
-#  with_commission        :boolean          not null
-#  with_deposit           :boolean          not null
+#  cash_id                 :integer          
+#  commission_account_id   :integer          
+#  commission_amount       :decimal(16, 2)   default(0.0), not null
+#  commission_percent      :decimal(16, 2)   default(0.0), not null
+#  company_id              :integer          not null
+#  created_at              :datetime         not null
+#  creator_id              :integer          
+#  depositables_account_id :integer          
+#  id                      :integer          not null, primary key
+#  lock_version            :integer          default(0), not null
+#  name                    :string(50)       not null
+#  published               :boolean          
+#  updated_at              :datetime         not null
+#  updater_id              :integer          
+#  with_accounting         :boolean          not null
+#  with_commission         :boolean          not null
+#  with_deposit            :boolean          not null
 #
 #
 # == Fixture: sale_payment_modes
