--- a/test/fixtures/cashes.yml
+++ b/test/fixtures/cashes.yml
@@ -86,7 +86,7 @@ cashes_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency_id: 1
-  by_default: true
+  by_default: false
   iban: "FR76"
   iban_label: "FR76"
   id: 2
@@ -96,3 +96,18 @@ cashes_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+
+cashes_003:
+  account_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  currency_id: 1
+  by_default: false
+  id: 3
+  journal_id: 1
+  mode: "iban"
+  name: "Lorem ipsum"
+  nature: "cash"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
