--- a/test/fixtures/deposit_lines.yml
+++ b/test/fixtures/deposit_lines.yml
@@ -18,52 +18,63 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: transports
+# == Table: deposit_lines
 #
-#  comment          :text             
-#  company_id       :integer          not null
-#  created_at       :datetime         not null
-#  created_on       :date             
-#  creator_id       :integer          
-#  id               :integer          not null, primary key
-#  lock_version     :integer          default(0), not null
-#  number           :string(255)      
-#  reference_number :string(255)      
-#  responsible_id   :integer          
-#  transport_on     :date             
-#  transporter_id   :integer          not null
-#  updated_at       :datetime         not null
-#  updater_id       :integer          
-#  weight           :decimal(16, 4)   
+#  amount       :decimal(16, 2)   default(1.0), not null
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  deposit_id   :integer          not null
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  quantity     :decimal(16, 4)   default(0.0), not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
 #
 #
-# == Fixture: transports
+# == Fixture: deposit_lines
 #
-# transports_001:
+# deposit_lines_001:
+#   amount: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   deposit_id: 1
 #   id: 1
-#   transporter_id: 1
+#   quantity: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-transports_001:
+deposit_lines_001:
+  amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  deposit_id: 3
   id: 1
-  transporter_id: 1
+  quantity: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-transports_002:
+deposit_lines_002:
+  amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  deposit_id: 3
   id: 2
-  transporter_id: 1
+  quantity: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+deposit_lines_003:
+  amount: 0
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  deposit_id: 3
+  id: 3
+  quantity: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
