--- a/test/fixtures/deposits.yml
+++ b/test/fixtures/deposits.yml
@@ -29,6 +29,7 @@
 #  created_on       :date             not null
 #  creator_id       :integer          
 #  id               :integer          not null, primary key
+#  in_cash          :boolean          not null
 #  journal_entry_id :integer          
 #  lock_version     :integer          default(0), not null
 #  locked           :boolean          not null
@@ -50,6 +51,7 @@
 #   created_on: 2009-07-19
 #   creator_id: 1
 #   id: 1
+#   in_cash: true
 #   locked: true
 #   mode_id: 1
 #   payments_count: 0
@@ -81,6 +83,21 @@ deposits_002:
   id: 2
   locked: false
   mode_id: 1
+  payments_count: 0
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+deposits_003:
+  amount: 0
+  cash_id: 3
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  id: 3
+  in_cash: true
+  locked: false
+  mode_id: 2
   payments_count: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
