--- a/test/fixtures/purchase_delivery_modes.yml
+++ b/test/fixtures/purchase_delivery_modes.yml
@@ -18,52 +18,50 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: transports
+# == Table: purchase_delivery_modes
 #
-#  comment          :text             
-#  company_id       :integer          not null
-#  created_at       :datetime         not null
-#  created_on       :date             
-#  creator_id       :integer          
-#  id               :integer          not null, primary key
-#  lock_version     :integer          default(0), not null
-#  number           :string(255)      
-#  reference_number :string(255)      
-#  responsible_id   :integer          
-#  transport_on     :date             
-#  transporter_id   :integer          not null
-#  updated_at       :datetime         not null
-#  updater_id       :integer          
-#  weight           :decimal(16, 4)   
+#  code         :string(8)        not null
+#  comment      :text             
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  name         :string(255)      not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
 #
 #
-# == Fixture: transports
+# == Fixture: purchase_delivery_modes
 #
-# transports_001:
+# purchase_delivery_modes_001:
+#   code: "Lorem ipsum"
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   transporter_id: 1
+#   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-transports_001:
+
+purchase_delivery_modes_001:
+  code: "LOREX"
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  transporter_id: 1
+  name: "Lorem ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-transports_002:
+purchase_delivery_modes_002:
+  code: "Lorem"
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  transporter_id: 1
+  name: "Lorem ipsum"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
