--- a/test/fixtures/operation_uses.yml
+++ b/test/fixtures/operation_uses.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: tool_uses
+# == Table: operation_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -31,9 +31,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: tool_uses
+# == Fixture: operation_uses
 #
-# tool_uses_001:
+# operation_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
