Add the production chains in interface
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1648 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -458,6 +458,18 @@ manage_journals:
   - journal_update
   - journals
   - journals_dyta
+manage_production_chains:
+  controller: production
+  actions:
+  - index
+  - production_chains
+  - production_chain
+  - production_chain_create
+  - production_chain_update
+  - production_chain_delete
+  - production_chain_operation_create
+  - production_chain_operation_update
+  - production_chain_operation_delete
 # translation missing: eng, rights, manage_land_parcel_groups
 manage_land_parcel_groups:
   controller: production
