--- a/test/fixtures/land_parcels.yml
+++ b/test/fixtures/land_parcels.yml
@@ -20,25 +20,21 @@
 # 
 # == Table: land_parcels
 #
-#  area_measure   :decimal(16, 4)   default(0.0), not null
-#  area_unit_id   :integer          
-#  company_id     :integer          not null
-#  created_at     :datetime         not null
-#  creator_id     :integer          
-#  cultivation_id :integer          
-#  description    :text             
-#  group_id       :integer          not null
-#  id             :integer          not null, primary key
-#  lock_version   :integer          default(0), not null
-#  master         :boolean          default(TRUE), not null
-#  name           :string(255)      not null
-#  number         :string(255)      
-#  parent_id      :integer          
-#  polygon        :string(255)      not null
-#  started_on     :date             
-#  stopped_on     :date             
-#  updated_at     :datetime         not null
-#  updater_id     :integer          
+#  area_measure :decimal(16, 4)   default(0.0), not null
+#  area_unit_id :integer          
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  description  :text             
+#  group_id     :integer          not null
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  name         :string(255)      not null
+#  number       :string(255)      
+#  started_on   :date             not null
+#  stopped_on   :date             
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
 #
 #
 # == Fixture: land_parcels
@@ -50,9 +46,8 @@
 #   creator_id: 1
 #   group_id: 1
 #   id: 1
-#   master: true
 #   name: "Lorem ipsum"
-#   polygon: "Lorem ipsum"
+#   started_on: 2009-07-19
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
