--- a/test/fixtures/land_parcels.yml
+++ b/test/fixtures/land_parcels.yml
@@ -60,9 +60,8 @@ land_parcels_001:
   creator_id: 1
   group_id: 1
   id: 1
-  master: true
   name: "Lorem ipsum"
-  polygon: "***"
+  started_on: 2009-07-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -74,9 +73,8 @@ land_parcels_002:
   creator_id: 1
   group_id: 1
   id: 2
-  master: true
   name: "Lorem ipsum"
-  polygon: "***"
+  started_on: 2009-07-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
