Add concept of token in production for the tracking
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1653 67a09383-3dfa-4221-8551-890bac9c277c

--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -20,28 +20,29 @@
 # 
 # == Table: operations
 #
-#  company_id     :integer          not null
-#  consumption    :decimal(16, 4)   
-#  created_at     :datetime         not null
-#  creator_id     :integer          
-#  description    :text             
-#  duration       :decimal(16, 4)   
-#  hour_duration  :decimal(16, 4)   
-#  id             :integer          not null, primary key
-#  lock_version   :integer          default(0), not null
-#  min_duration   :decimal(16, 4)   
-#  moved_on       :date             
-#  name           :string(255)      not null
-#  nature_id      :integer          
-#  planned_on     :date             not null
-#  responsible_id :integer          not null
-#  started_at     :datetime         not null
-#  stopped_at     :datetime         
-#  target_id      :integer          
-#  target_type    :string(255)      
-#  tools_list     :string(255)      
-#  updated_at     :datetime         not null
-#  updater_id     :integer          
+#  company_id                :integer          not null
+#  consumption               :decimal(16, 4)   
+#  created_at                :datetime         not null
+#  creator_id                :integer          
+#  description               :text             
+#  duration                  :decimal(16, 4)   
+#  hour_duration             :decimal(16, 4)   
+#  id                        :integer          not null, primary key
+#  lock_version              :integer          default(0), not null
+#  min_duration              :decimal(16, 4)   
+#  moved_on                  :date             
+#  name                      :string(255)      not null
+#  nature_id                 :integer          
+#  planned_on                :date             not null
+#  production_chain_token_id :integer          
+#  responsible_id            :integer          not null
+#  started_at                :datetime         not null
+#  stopped_at                :datetime         
+#  target_id                 :integer          
+#  target_type               :string(255)      
+#  tools_list                :string(255)      
+#  updated_at                :datetime         not null
+#  updater_id                :integer          
 #
 #
 # == Fixture: operations
