--- a/test/fixtures/production_chain_conveyors.yml
+++ b/test/fixtures/production_chain_conveyors.yml
@@ -20,6 +20,122 @@
 # 
 # == Table: production_chain_conveyors
 #
+#  check_state         :boolean          not null
+#  comment             :text             
+#  company_id          :integer          not null
+#  created_at          :datetime         not null
+#  creator_id          :integer          
+#  flow                :decimal(16, 4)   default(0.0), not null
+#  id                  :integer          not null, primary key
+#  lock_version        :integer          default(0), not null
+#  product_id          :integer          not null
+#  production_chain_id :integer          not null
+#  source_id           :integer          
+#  source_quantity     :decimal(16, 4)   default(0.0), not null
+#  target_id           :integer          
+#  target_quantity     :decimal(16, 4)   default(0.0), not null
+#  unit_id             :integer          not null
+#  updated_at          :datetime         not null
+#  updater_id          :integer          
+#
+#
+# == Fixture: production_chain_conveyors
+#
+# production_chain_conveyors_001:
+#   check_state: true
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   flow: 0
+#   id: 1
+#   product_id: 1
+#   production_chain_id: 1
+#   source_quantity: 0
+#   target_quantity: 0
+#   unit_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
+
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_conveyors
+#
+#  check_state         :boolean          not null
+#  comment             :text             
+#  company_id          :integer          not null
+#  created_at          :datetime         not null
+#  creator_id          :integer          
+#  flow                :decimal(16, 4)   default(0.0), not null
+#  id                  :integer          not null, primary key
+#  lock_version        :integer          default(0), not null
+#  product_id          :integer          not null
+#  production_chain_id :integer          not null
+#  source_id           :integer          
+#  source_quantity     :decimal(16, 4)   default(0.0), not null
+#  target_id           :integer          
+#  target_quantity     :decimal(16, 4)   default(0.0), not null
+#  unit_id             :integer          not null
+#  updated_at          :datetime         not null
+#  updater_id          :integer          
+#
+#
+# == Fixture: production_chain_conveyors
+#
+# production_chain_conveyors_001:
+#   check_state: true
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   flow: 0
+#   id: 1
+#   product_id: 1
+#   production_chain_id: 1
+#   source_quantity: 0
+#   target_quantity: 0
+#   unit_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_conveyors
+#
 #  check_on_input      :boolean          not null
 #  check_on_output     :boolean          not null
 #  comment             :text             
@@ -56,8 +172,6 @@
 #   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#
-
 # = Informations
 # 
 # == License
