--- a/test/fixtures/production_chain_tokens.yml
+++ b/test/fixtures/production_chain_tokens.yml
@@ -18,32 +18,34 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_conveyors
+# == Table: production_chain_tokens
 #
-#  check_state         :boolean          not null
 #  comment             :text             
 #  company_id          :integer          not null
 #  created_at          :datetime         not null
 #  creator_id          :integer          
-#  flow                :decimal(16, 4)   default(0.0), not null
 #  id                  :integer          not null, primary key
 #  lock_version        :integer          default(0), not null
-#  product_id          :integer          not null
 #  production_chain_id :integer          not null
-#  source_id           :integer          
-#  source_quantity     :decimal(16, 4)   default(0.0), not null
-#  target_id           :integer          
-#  target_quantity     :decimal(16, 4)   default(0.0), not null
-#  unit_id             :integer          not null
+#  tracking_code       :string(255)      not null
 #  updated_at          :datetime         not null
 #  updater_id          :integer          
 #
+#
+# == Fixture: production_chain_tokens
+#
+# production_chain_tokens_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   production_chain_id: 1
+#   tracking_code: "Lorem ipsum"
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-require 'test_helper'
-
-class ProductionChainConveyorTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
-  end
-end
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
