--- a/test/fixtures/production_chain_tokens.yml
+++ b/test/fixtures/production_chain_tokens.yml
@@ -26,6 +26,53 @@
 #  creator_id          :integer          
 #  id                  :integer          not null, primary key
 #  lock_version        :integer          default(0), not null
+#  number              :string(255)      not null
+#  production_chain_id :integer          not null
+#  updated_at          :datetime         not null
+#  updater_id          :integer          
+#
+#
+# == Fixture: production_chain_tokens
+#
+# production_chain_tokens_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   number: "Lorem ipsum"
+#   production_chain_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
+
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_tokens
+#
+#  comment             :text             
+#  company_id          :integer          not null
+#  created_at          :datetime         not null
+#  creator_id          :integer          
+#  id                  :integer          not null, primary key
+#  lock_version        :integer          default(0), not null
 #  production_chain_id :integer          not null
 #  tracking_code       :string(255)      not null
 #  updated_at          :datetime         not null
@@ -43,8 +90,6 @@
 #   tracking_code: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#
-
 # This model initially had no columns defined.  If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
